# mbkauthepy

./: .env.example  README.md  README1.md  README2.md  app.py  cookies.txt  custom_session_interface.py  pyproject.toml  requirements.txt  setup.py
Test/: app.py
Test/templates/: base.html  index.html  login.html
docs/: c.md  db.md
mbkauthe/: __init__.py  db.py  middleware.py  pyproject.toml  routes.py
mbkauthe/templates/Error/: NotLoggedIn.html
mbkauthepy/: __init__.py  config.py  custom_session_interface.py  db.py  middleware.py  routes.py  utils.py
mbkauthepy/templates/: Error.handlebars  error.html  loginmbkauthe.handlebars
mbkauthepy/templates/Error/: AccessDenied.html  AccountInactive.html  Error.html  InternalError.html  NotLoggedIn.html  SessionExpire.html
src/mbkauthe/: __init__.py  custom_session_interface.py
templates/: home.html  index.html
