[tool.poetry]
name = "mbkauthe-python"
version = "0.1.0" # Match JS version or start fresh
description = "Reusable authentication system for Python Flask applications, ported from Node.js mbkauthe."
authors = ["Maaz.waheed <support@mbktechstudio.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/42Wor/mbkauthe-python" # Example repo
homepage = "https://github.com/42Wor/mbkauthe-python" # Example repo

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.0"
Flask-Session = "^0.5.0"
psycopg2-binary = "^2.9.5" # Or psycopg2 if compiling
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
requests = "^2.28.1"
pyotp = "^2.8.0"
Flask-Cors = "^4.0.0"
importlib-metadata = { version = "^6.0.0", python = "<3.10" } # For package version reading

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"